# vrd-extractor

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  conanfile.py  conanfile.txt  setup.CodeLite.Default.Native.Debug.sh  setup.Coverage.sh  setup.Debug.sh  setup.Release.sh
.github/workflows/: analyze.yml  build.yml
Source/: CMakeLists.txt
Source/vrdextractor/: CMakeLists.txt
Source/vrdextractor/etc/: loggerConfig.xml
Source/vrdextractor/source/: main.cpp
Source/vrdlib/api/: CMakeLists.txt
Source/vrdlib/api/include/: CProperty.h  IConflictHandler.h  IInterpreter.h  IPropertySink.h  IPropertySource.h  PropertyTypes.h
Source/vrdlib/api/source/: CProperty.cpp  IPropertySink.cpp
Source/vrdlib/canon/: CMakeLists.txt
Source/vrdlib/canon/include/: CDR4.h  CDirectoryEntryHeader.h  CEdit.h  CExif.h  CPropertyAdapter.h  CTiff.h  CVRD.h
Source/vrdlib/canon/source/: CCR2.cpp  CCRW.cpp  CDR4.cpp  CEdit4.cpp  CExif.cpp  CPropertyAdapter.cpp  CVRD.cpp  PropertyTypes.cpp
Source/vrdlib/common/include/: CDescriptor.h  CExtractor.h  CPropertyHandler.h  CPropertySourceFactory.h  CXMPWriter.h
Source/vrdlib/common/source/: CExtractor.cpp  CPropertyHandler.cpp  CPropertySourceFactory.cpp  CXMPWriter.cpp
Source/vrdlib/test/etc/DR4/: V4_CM1.dr4  V4_CM4.dr4  V4_CM5.dr4  V4_Rating1.dr4
Source/vrdlib/test/etc/VRD/: V3_CM1.vrd
Source/vrdlib/test/include/: CConflictHandlerMock.h  CPropertySourceMock.h  CReaderAwareTestBase.h  CSampleDirectoryAwareTestBase.h  CTempDirectoryAwareTestBase.h
Source/vrdlib/test/source/: AutoPositionerTest.cpp  CanonIntegrationTest.cpp  ConflictHandlerTest.cpp  ContextTest.cpp  ExtractorTest.cpp  FileUtilityTest.cpp  PositionUtilityTest.cpp  PropertyAdapterTest.cpp  PropertyHandlerTest.cpp  PropertySourceFactoryTest.cpp  StreamReaderTest.cpp  XMPWriterTest.cpp
Source/vrdlib/utility/include/: CConflictHandler.h  FileUtility.h  LoggerUtility.h
Source/vrdlib/utility/source/: CConflictHandler.cpp  CStreamReader.cpp  FileUtility.cpp
etc/: cmake-config.sh  conan-config.sh  conan-install.sh
source/: CMakeLists.txt
source/vrdextractor/: CMakeLists.txt
source/vrdextractor/etc/: loggerConfig.xml
source/vrdextractor/source/: main.cpp
source/vrdlib/: CMakeLists.txt
source/vrdlib/api/: CMakeLists.txt
source/vrdlib/api/include/: CProperty.h  IConflictHandler.h  IInterpreter.h  IPropertySink.h  IPropertySource.h  PropertyTypes.h
source/vrdlib/api/source/: CProperty.cpp  IConflictHandler.cpp  IPropertySink.cpp  IPropertySource.cpp  PropertyTypes.cpp
source/vrdlib/canon/: CMakeLists.txt
source/vrdlib/canon/include/: CCR2.h  CCRW.h  CDirectoryEntryHeader.h  CEdit4.h  DescriptorTypes.h  PropertyTypes.h
source/vrdlib/canon/source/: CDR4.cpp  CDirectoryEntryHeader.cpp  CEdit.cpp  CExif.cpp  CPropertyAdapter.cpp  CTiff.cpp  DescriptorTypes.cpp
source/vrdlib/common/: CMakeLists.txt
source/vrdlib/common/include/: CAutoPositioner.h  CContext.h  CDescriptor.h  CExtractor.h  CPropertyHandler.h  CPropertySinkFactory.h  CPropertySourceFactory.h  CXMPWriter.h
source/vrdlib/common/source/: CAutoPositioner.cpp  CContext.cpp  CDescriptor.cpp  CExtractor.cpp  CPropertyHandler.cpp  CPropertySinkFactory.cpp  CPropertySourceFactory.cpp  CXMPWriter.cpp
source/vrdlib/test/: CMakeLists.txt
source/vrdlib/test/etc/: .gitignore
source/vrdlib/test/etc/DR4/: V4_CM2.dr4  V4_CM3.dr4  V4_Rating2.dr4
source/vrdlib/test/etc/VRD/: V3_CM2.vrd  V3_CM3.vrd  V3_CM4.vrd  V3_CM5.vrd
source/vrdlib/test/include/: CConflictHandlerMock.h  CPropertySourceMock.h  CReaderAwareTestBase.h  CSampleDirectoryAwareTestBase.h  CTempDirectoryAwareTestBase.h
source/vrdlib/test/source/: AutoPositionerTest.cpp  CTempDirectoryAwareTestBase.cpp  CanonIntegrationTest.cpp  ConflictHandlerTest.cpp  ContextTest.cpp  DescriptorTest.cpp  ExtractorTest.cpp  FileUtilityTest.cpp  PropertyAdapterTest.cpp  PropertyHandlerTest.cpp  PropertySourceFactoryTest.cpp  StreamReaderTest.cpp  XMPWriterTest.cpp  main.cpp
source/vrdlib/utility/: CMakeLists.txt
source/vrdlib/utility/include/: CConflictHandler.h  CStreamReader.h  FileUtility.h  LoggerUtility.h  PositionUtility.h
source/vrdlib/utility/source/: CConflictHandler.cpp  CStreamReader.cpp  FileUtility.cpp  LoggerUtility.cpp  PositionUtility.cpp
